--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      body {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+        margin-top: 100px;
+      }
+      input {
+        text-align: center;
+        font-size: 30px;
+        margin: 20px;
+      }
+      .timer {
+        display: flex;
+        justify-content: center;
+        margin: 20px;
+      }
+      .field {
+        text-align: center;
+        margin: 20px;
+      }
+      .value {
+        font-size: 50px;
+      }
+      .label {
+        display: block;
+      }
+      button {
+        height: 50px;
+        font-size: 30px;
+        margin-top: 60px;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
